UV editor: vertex snap, active does not make any sense. #59865

Closed
opened 2018-12-26 10:45:08 +01:00 by Bill Currie · 5 comments

System Information
Operating system: linux
Graphics card: nv gtx 1080

Blender Version
Broken: 2.80

Short description of error
Attempting to use vertex snapping with "active" for the snap mode causes the selection to go off in strange directions. Also, there is no indication as to what the active element is (separate bug?) It appears that the active 3d vertex is used instead of having an active UV vertex.

Exact steps for others to reproduce the error
UV editor with default cube and default UV map: select the 2 right most UV vertices. With each of the cube's eight 3d vertices active, the selection snaps to a different completely unintuitive location.

**System Information** Operating system: linux Graphics card: nv gtx 1080 **Blender Version** Broken: 2.80 **Short description of error** Attempting to use vertex snapping with "active" for the snap mode causes the selection to go off in strange directions. Also, there is no indication as to what the active element is (separate bug?) It appears that the active 3d vertex is used instead of having an active UV vertex. **Exact steps for others to reproduce the error** UV editor with default cube and default UV map: select the 2 right most UV vertices. With each of the cube's eight 3d vertices active, the selection snaps to a different completely unintuitive location.
Author

Added subscriber: @taniwha

Added subscriber: @taniwha

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Sebastian Parborg self-assigned this 2018-12-27 18:00:49 +01:00

I've uploaded a workaround to D4129

The main problem is that the UV editor does not have any active elements and introducing that would be out of scope for 2.80.

I've uploaded a workaround to [D4129](https://archive.blender.org/developer/D4129) The main problem is that the UV editor does not have any active elements and introducing that would be out of scope for 2.80.

This issue was referenced by 5b9440278e

This issue was referenced by 5b9440278ee9001645e4475436f6899c84d4ba1c

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59865
No description provided.