Fix T59865: UV editor vertex snap to active does not make any sense.

Differential Revision: https://developer.blender.org/D4129